tests/rosetta/transpiler/C/chat-server.c
// Generated by Mochi 0.10.32 on 2025-08-04 15:00 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t removeName_len;

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

const char* * removeName(const char* * names, size_t names_len, const char* name);
void user_main();
int main(void);

const char* * removeName(const char* * names, size_t names_len, const char* name) {
    const char* *out = NULL;
    size_t out_len = 0;
    for (size_t __i = 0; __i < names_len; __i++) {
        const char* n = names[__i];
        if (strcmp(n, name) != 0) {
            out = list_append_str(out, &out_len, n);
        }
    }
    return removeName_len = out_len, out;
}

void user_main() {
    const char* *clients = NULL;
    size_t clients_len = 0;
    add("Alice");
    add("Bob");
    send("Alice", "Hello Bob!");
    send("Bob", "Hi Alice!");
    remove("Bob");
    remove("Alice");
    broadcast("Server stopping!\n");
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
